# NextClaw

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V3.md  CLAUDE.md  CLAWX_FEATURES.md  CLAWX_FEATURES_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  PROGRESS_REPORT.md  README.md  RUST_IMPLEMENTATION_PLAN.md  TROUBLESHOOTING.md  build-windows.bat  build-windows.ps1  build.sh  create-ico.cjs  create-icons.cjs  create-png-icons.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json  vs-setup-help.txt
.github/workflows/: build.yml  ci.yml  code-quality.yml  pr-checklist.yml  release.yml
_bmad-output/brainstorming/: brainstorming-session-2026-04-09-06-20-25.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: FUNCTIONALITY_COMPARISON.md
sdk/: README.md  build-skill.sh
sdk/ceo-claw-sdk/: Cargo.toml
sdk/ceo-claw-sdk/src/: context.rs  lib.rs  manifest.rs  types.rs  utils.rs
sdk/examples/hello-world/: Cargo.toml  manifest.json
sdk/examples/hello-world/src/: lib.rs
src/: App.backup.tsx  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: placeholder.txt
src-tauri/src/: lib.rs  main.rs  recorder.rs  streaming.rs  tray.rs  workflow.rs
src-tauri/src/agents/: mod.rs
src-tauri/src/ai/: client.rs  mod.rs  parser.rs  prompt.rs
src-tauri/src/channel_accounts/: mod.rs
src-tauri/src/channels/: manager.rs  mod.rs  types.rs
src-tauri/src/commands/: agents.rs  anthropic.rs  channel.rs  channel_accounts.rs  chat.rs  chat_v2.rs  command_exec.rs  cron.rs  developer.rs  file_ops.rs  gateway.rs  hotkey.rs  marketplace.rs  mod.rs  ollama.rs  plugin.rs  proxy.rs  recorder.rs  settings.rs  updates.rs  wasm.rs  wizard.rs  workflow.rs  workspace.rs
src-tauri/src/cron/: mod.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  schema.rs
src-tauri/src/exec/: mod.rs  security.rs  shell.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/ollama/: client.rs  manager.rs  mod.rs  models.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/security/: encryption.rs  mod.rs
src-tauri/src/skills/: host.rs  manifest.rs  mod.rs  permissions.rs  runtime.rs  sandbox.rs
src-tauri/src/telemetry/: logging.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/utils/: config.rs  error.rs
src/components/: ChatEnhanced.tsx  ChatInterface.tsx  CommandResult.tsx  Dashboard.tsx  DashboardSimple.tsx  I18nProvider.tsx  InputArea.tsx  MessageBubble.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeProvider.tsx
src/components/settings/: DeveloperTools.tsx  ProxySettings.tsx
src/i18n/: index.ts
src/i18n/locales/en/: common.json
src/i18n/locales/ja/: common.json
src/i18n/locales/zh/: common.json
src/lib/: logs.ts  runtime.ts  settings.ts  wizard.ts  workspaces.ts
src/pages/: Agents.tsx  Channels.tsx  Chat.tsx  Cron.tsx  Dashboard.tsx  Hotkeys.tsx  Installer.tsx  Logs.tsx  Models.tsx  Recorder.tsx  Settings.tsx  Skills.tsx  Workflows.tsx  Workspaces.tsx
src/pages/Setup/: SetupWizard.tsx
src/pages/Setup/steps/: AIProviderStep.tsx  FeaturesStep.tsx  WorkspaceStep.tsx  index.ts
src/store/: i18n.ts  index.ts  logs.ts  runtime.ts  settings.ts  theme.ts  workspaces.ts
src/types/: index.ts
src/utils/: helpers.ts
