[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CEOClaw Team"]
license = "MIT"

[workspace.dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
directories = "5.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
glob = "0.3"

# Shell execution
command-group = "5.0"
sysinfo = "0.30"
shlex = "1.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Streaming
futures = "0.3"

# WASM support
wasmtime = "23.0"

# Base64 encoding
base64 = "0.22"

# Semantic versioning
semver = "1.0"

# Image processing
image = "0.24"

# Screen capture
screenshots = "0.7"

# OCR (using tesseract instead of opencv for simpler dependencies)
tesseract = "0.14"
leptonica-plumbing = "1.4"

# Input simulation and monitoring
enigo = { version = "0.2", default-features = false }
rdev = "0.5"

# Expression evaluation (for workflow variables)
evalexpr = "11.0"

# Removed dependencies (no longer needed):
# opencv = "0.88"  # Too complex, replaced with tesseract
# inputbot = "0.6"  # Unmaintained, replaced with enigo

# Keychain storage
keyring = "3.0"

# Encryption
aes-gcm = "0.10"
hostname = "0.4"
getrandom = "0.2"

# i18n
rust-i18n = "0.4"
rust-embed = "8.0"

[workspace.lints.rust]
# Enable strict lints
unsafe_code = "forbid"
unused_qualifications = "warn"
dead_code = "warn"

[workspace.lints.clippy]
# Clippy lints
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow some pedantic lints that may be too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"