[package]
name = "ceo-claw"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "ceo_claw"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Workspace dependencies
tauri.workspace = true
tauri-plugin-shell.workspace = true
tokio.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
secrecy.workspace = true
zeroize.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
glob.workspace = true
command-group.workspace = true
sysinfo.workspace = true

# Additional dependencies
async-trait = "0.1"
once_cell = "1.19"
derive_more = { version = "0.99", features = ["display", "error"] }
futures = "0.3"
pin-project = "1.1"
shlex = "1.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
wasmtime = "23.0"
base64 = "0.22"
semver = "1.0"
cron = "0.12"
bytes = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
